# Marzanna

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.cpp
assets/shaders/: engine-material-shader.frag.glsl  engine-material-shader.vert.glsl
engine/: CMakeLists.txt  main.cpp
engine/src/: asserts.h  defines.h  main.cpp  marzanna.h  mzpch.h
engine/src/core/: application.cpp  application.h  entry.h  input.h  input_keycodes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  utils.h  uuid.cpp  uuid.h  window.h
engine/src/core/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/platform/: windows_input.cpp  windows_input.h  windows_vulkan.cpp  windows_vulkan.h  windows_window.cpp  windows_window.h
engine/src/renderer/: geometry.cpp  geometry.h  perspective_camera.cpp  perspective_camera.h  render_api.cpp  render_api.h  render_buffer.cpp  render_buffer.h  render_types.h  renderer_backend.h  texture.cpp  texture.h
engine/src/renderer/vulkan/: vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_context.h  vulkan_device.cpp  vulkan_device.h  vulkan_functions.cpp  vulkan_functions.h  vulkan_geometry.cpp  vulkan_geometry.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_platform.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_renderer_backend.cpp  vulkan_renderer_backend.h  vulkan_swap_chain.cpp  vulkan_swap_chain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_utils.cpp  vulkan_utils.h
engine/src/renderer/vulkan/shaders/: vulkan_shader_utils.cpp  vulkan_shader_utils.h
engine/src/system/: FileReader.cpp  FileReader.h  file_reader.cpp  file_reader.h  geometry_system.cpp  geometry_system.h  texture_system.cpp  texture_system.h
engine/src/system/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h
